# ur5_draw

./: .gitignore  README.md
image_processing/: requirements.txt
image_processing/src/: constants.py  edge_processing.py  main.py  point_processing.py
ur5_draw_ws/: .ur5_drawrc  cali.yaml  calibrate.sh  launch_move_it.sh  launch_ur5_drawing.sh  launch_ur_control.sh  setup.sh
ur5_draw_ws/src/Universal_Robots_ROS2_Driver/ur_bringup/config/: test_goal_publishers_config.yaml
ur5_draw_ws/src/Universal_Robots_ROS2_Driver/ur_calibration/launch/: calibration_correction.launch.py
ur5_draw_ws/src/Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_moveit.launch.py
ur5_draw_ws/src/Universal_Robots_ROS2_Driver/ur_moveit_config/srdf/: ur.srdf.xacro
ur5_draw_ws/src/Universal_Robots_ROS2_Driver/ur_robot_driver/include/ur_robot_driver/: hardware_interface.hpp
ur5_draw_ws/src/Universal_Robots_ROS2_Driver/ur_robot_driver/launch/: ur_control.launch.py
ur5_draw_ws/src/Universal_Robots_ROS2_Driver/ur_robot_driver/src/: hardware_interface.cpp
ur5_draw_ws/src/image_to_drawing/: package.xml  setup.cfg  setup.py
ur5_draw_ws/src/image_to_drawing/image_to_drawing/: instruction_node.py
ur5_draw_ws/src/image_to_drawing/src/: instruction_node.py
ur5_draw_ws/src/image_to_drawing/src/lib/: edge_processing.py  main.py  point_processing.py
ur5_draw_ws/src/ur5_drawing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ur5_draw_ws/src/ur5_drawing/config/: drawing.rviz  drawing_config.yaml  joint_calibration.yaml
ur5_draw_ws/src/ur5_drawing/config/move_it/: ompl_planning.yaml  ur.srdf.xacro  ur_macro.srdf.xacro
ur5_draw_ws/src/ur5_drawing/image_description/: bubble_metadata.json  image_description.json
ur5_draw_ws/src/ur5_drawing/include/: config_loader.hpp  drawing_utils.hpp  ur5_drawing_node.hpp
ur5_draw_ws/src/ur5_drawing/launch/: joint_calibration.launch.py  ur5_drawing.launch.py
ur5_draw_ws/src/ur5_drawing/resource/: drawing.rviz
ur5_draw_ws/src/ur5_drawing/src/: config_loader.cpp  drawing_utils.cpp  joint_calibration.cpp  ur5_drawing_node.cpp
ur5_draw_ws/src/ur5_drawing/ur5_drawing/: drawing_utils.py  ur5_drawing_node.py
